# nexus

./: .env.example  .gitignore  Cargo.toml  README.md  justfile  shell.nix
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/app/: AppHeader.tsx  navigation.ts  useHealth.ts
frontend/src/components/auth/: AuthForm.tsx
frontend/src/components/charts/: BarChartComponent.tsx  LineChartComponent.tsx  PieChartComponent.tsx  index.ts
frontend/src/constants/: chart.ts
frontend/src/pages/builder/: GraphBuilderPage.tsx
frontend/src/pages/dashboard/: DashboardPage.tsx
frontend/src/pages/landing/: LandingPage.tsx
frontend/src/pages/login/: LoginPage.tsx
frontend/src/pages/signup/: SignupPage.tsx
frontend/src/utils/: authCallback.ts  authStorage.ts  format.ts
src/: health.rs  lib.rs  main.rs  state.rs
src/api/: db.rs  error.rs  mod.rs
src/api/auth/: google.rs  login.rs  mod.rs  signup.rs  types.rs
src/api/auth/google/: client.rs  mod.rs  session.rs
src/api/dashboard/: mod.rs  types.rs
src/api/error/: body.rs  mod.rs  response.rs
src/api/sources/: data.rs  mod.rs  models.rs  scope.rs
src/api/topics/: mod.rs  query.rs
src/api/topics/endpoints/: dynamic.rs  headline.rs  mod.rs
src/database/: mod.rs
src/database/ops/: mod.rs  password.rs  user.rs
src/database/ops/password/: format.rs  hash.rs  mod.rs
src/database/ops/user/: account.rs  mod.rs
src/database/schema/: mod.rs
src/database/schema/login/: mod.rs
src/sources/: date.rs  mod.rs  persistance.rs
src/sources/data/: mod.rs
src/sources/date/: calendar.rs  mod.rs  month.rs
src/sources/emerson/: mod.rs
src/sources/gallup/: mod.rs
src/sources/ipsos/: mod.rs
src/sources/persistance/: mod.rs  refresh.rs
src/sources/registry/: mod.rs
src/sources/scope/: mod.rs
src/sources/yougov/: mod.rs
src/topics/: answers.rs  catalog.rs  demographics.rs  mod.rs  nlp.rs  service.rs  types.rs
src/topics/answers/: aggregate.rs  mod.rs
src/topics/demographics/: groups.rs  labels.rs  mod.rs
src/topics/enrichment/: mod.rs  text.rs
src/topics/mappings/: common.rs  emerson.rs  mod.rs
src/topics/nlp/: intent.rs  labels.rs  mod.rs  models.rs
src/topics/service/: headlines.rs  mod.rs  pooling.rs
src/topics/types/: demographics.rs  mod.rs  observations.rs  topics.rs
src/utils/: mod.rs
src/utils/jwt/: mod.rs
tests/: api_sources.rs  api_topics.rs  database_ops.rs  emerson_download.rs  emerson_extract.rs  gallup_download.rs  gallup_extract.rs  ipsos_download.rs  ipsos_extract.rs  sources_date.rs  topics_answers.rs  topics_demographics.rs  topics_enrichment.rs  topics_nlp.rs  yougov_download.rs  yougov_extract.rs
(+129 files in other folders)
