[package]
name = "nexus"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-lc-rs = { version = "1.16.3" }
axum = "0.8.9"
base64 = "0.22.1"
chrono = "0.4.44"
diesel = { version = "2.3.8", features = ["postgres", "r2d2", "chrono", "uuid"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6.7", features = ["fs"] }
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.23.1", features = ["v4"] }
